<resources>
    <integer name="com_vk_sdk_AppId">6247778</integer>
    <string name="service_key">7c2f78977c2f78977c2f7897cf7c702df577c2f7c2f789725d0547ae54d871015328f12</string>
    <string name="firebase_cloud_messaging_server_key">AAAAhsFBP2w:APA91bGzXpe5ylwm2fhIkhPIj6E7jBeiEcEYsJTdfSNvCZcSlCjQYsvbUCbGbrRxSBkuOwEOFYG7HVi78yTpNSFnNIDr3BjNGfutmcP9nwCOSyHYKnBY12150CA27_b36f4j1Gs3nxNu</string>
    <string name="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="url_icon">https://pp.userapi.com/c639323/v639323758/27deb/L0SSSPfpEfA.jpg</string>

    <string name="app_name">M-union</string>
    <string name="title_news_feed">Новости</string>
    <string name="title_account">Авторизация</string>
    <string name="title_credit">Ипотека</string>
    <string name="title_contacts">Контакты</string>
    <string name="title_statistics">Статистика</string>
    <string name="title_chat">Чат</string>
    <string name="title_personal_cabinet">Личный кабинет</string>

    <!-- Contacts Fragment -->
    <string name="contacts_address">Санкт-Петербург, Выборгское шоссе, д.36, офис 212</string>
    <string name="contacts_address_head">Адрес:</string>
    <string name="contacts_site">продамжильё.рф</string>
    <string name="contacts_site_head">Сайт:</string>
    <string name="contacts_vk">https://vk.com/m_union</string>
    <string name="contacts_vk_head">ВКонтакте:</string>
    <string name="contacts_phone">+7(812)988-64-14</string>
    <string name="contacts_phone_head">Телефон:</string>
    <string name="contatcs_contact_us">Связаться с нами просто:</string>


    <!-- Auth Fragment -->
    <string name="auth_btn_text">АВТОРИЗОВАТЬСЯ</string>
    <string name="auth_edit_hint_phone">+7 (987) 654 - 32 -10</string>
    <string name="auth_edit_hint_pass">********</string>
    <string name="auth_head_text">Введите номер и пароль для входа</string>


    <!-- Auth Fragment -->
    <string name="credit_btn_text">ОСТАВИТЬ ЗАЯВКУ</string>
    <string name="credit_edit_hint_name">Ваше имя</string>
    <string name="credit_edit_hint_phone">Ваш телефон</string>
    <string name="credit_head_text">Оформите заявку на ипотеку прямо сейчас</string>
    <string name="object">Название объекта</string>
    <string name="count_of_views">Количество \nпросмотров</string>
    <string name="count_of_calls">Количество \nзвонков</string>
    <string name="count_of_shows">Количество \nпоказов</string>
    <string name="input_message">Введите сообщение</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- CabinetActivity -->
    <string name="address_btn_example">Сенная пл., 1, кв 5</string>
    <string name="cabinet_tv_name_example">Олег</string>
    <string name="cabinet_tv_date_of_publish_example">Дата размещения: 03.11.17</string>
    <string name="cabinet_btn_copy_link">Копировать ссылку</string>
    <string name="cabinet_btn_out_money">Вывести средства</string>
    <string name="signin">Войти</string>
    <string name="incorrect_phone_number">: некорректный номер телефона!</string>
    <string name="too_many_requests">: слишком много запросов в день!</string>
    <string name="error_auth">Ошибка авторизации</string>
    <string name="incorrect_password">Неверный пароль, выслан новый.</string>
    <string name="auth_validation_toast">Введите корректные данные!\nНомер телефона в формате +71234567892\nПароль не пустой</string>
    <string name="iv_user_photo_description">Photo of user</string>
    <string name="iv_bar_descr">Photo of user, by click goes to personal cabinet</string>
    <string name="fill_code_here">Введите полученный код</string>
    <string name="reload">Reload</string>
    <string name="description_iv_piter">Saint-Petersburg building logo</string>
    <string name="logo_m_union_rus">Logo M-Union rus</string>
    <string name="description_iv_building">building Saint Petersburg</string>
    <string name="invited_count">Приглашено: %s чел.</string>
    <string name="invited_count_temp">Приглашено: 11 чел.</string>
    <string name="balance">Баланс: %s руб.</string>
    <string name="balance_temp">Баланс: 47500 руб.</string>
    <string name="button_for_playing_audio">Button for playing audio</string>
    <string name="recs_of_calls">Записи звонков</string>
    <string name="error_when_load_data">При загрузке данных произошла ошибка!</string>
    <string name="for_accept_fill_phone_number">Для подтверждения введите свой номер телефона</string>
    <string name="cant_send_money">Не удалось вывести деньги!</string>
    <string name="wrong_phone_number">Неверный номер телефона!</string>
    <string name="move_money">Вывести</string>
    <string name="how_much_money">Желаемая сумма в рублях</string>
    <string name="title_money">Вывод средств</string>
    <string name="fill_fields">Заполните все поля</string>
    <string name="succes_money_request">Запрос успешно выполнен</string>
    <string name="fill_card_number_and_money">Введите номер карты и желаемую сумму</string>
    <string name="have_no_money">Недостаточно денег!</string>
    <string name="munion_logo">MUnion logo</string>
    <string name="center_secondary_homes">ЦЕНТР ВТОРИЧНОГО ЖИЛЬЯ</string>
    <string name="munion_tour_body">Центр Вторичного Жилья — первая компания, объединившая услуги по продаже / покупке жилой недвижимости, ремонту и оценке объектов в единое комплексное решение.</string>
    <string name="always_with_you">Всегда с вами!</string>
    <string name="statistics">Статистика</string>
    <string name="statistics_tour_description">В мобильном приложении вы можете отслеживать самую актуальную информацию о вашем объекте!</string>
    <string name="calls">Звонки</string>
    <string name="calls_tour_body">Прослушивайте звонки о продажах вашего объекта прямо в приложении</string>
    <string name="agent">Агент</string>
    <string name="agent_tour_description">Ваш персональный агент всегда на связи - вы можете общаться с ним внутри приложения</string>
    <string name="hypothec">Ипотека</string>
    <string name="news">Новости</string>
    <string name="news_tour_description">Новости рынка недвижимости и добрые посты вы найдете в разделе Новости</string>
    <string name="hypothec_tour_body">Оформить ипотеку? Это просто - пару минут и ваша заявка у нас на рассмотрении!</string>
    <string name="welcome_to_the_club">Добро пожаловать в клуб!</string>
    <string name="card_tour_description">Отныне вы являетесь владельцем клубной карты и можете зарабатывать деньги вместе с нами просто рассказывая друзьям о нас</string>
    <string name="from_friend">Вас пригласил друг?</string>
    <string name="fill_loyalty_code">Если вас пригласил друг, пожалуйста введите его код лояльности</string>
    <string name="temp_code">h8an-hl47y-dnx3R-nGzGP</string>
    <string name="tour_continue">ПРОДОЛЖИТЬ</string>
    <string name="friend_doesnt_invited">Меня не приглашал друг</string>
    <string name="end_auth">Завершим авторизацию</string>
    <string name="fill_code_sent_on_phone">Введите код, отправленный на %s</string>
    <string name="error_message">Сначала ответьте на этот вопрос</string>
    <string name="chat_tour_body">Вы сможете общаться с нашим агентом с помощью встроенного чата, отправлять нужные документы и договариваться о встречах.</string>
    <string name="chat_tour_head">Чат с персональным агентом</string>
    <string name="stat_tour_body">Вы сможете узнавать актуальную статистику показов, просмотров и звонков, а так же прослушивать все звонки, относящиеся к вашей квартире</string>
    <string name="stat_tour_head">Всегда актуальная статистика</string>
    <string name="fill_friend_code">Введите код друга!</string>
    <string name="fill_sms_code">Введите код отправленный по смс!</string>
    <string name="vk_package">com.vkontakte.android</string>
    <string name="who_we_are">Кто мы?</string>
    <string name="cant_load_statistics">Не удалось загрузить статистику</string>
    <string name="refresh_statistics_button">Refresh statistics button</string>
    <string name="load_statistics">Загружаем статистику</string>
    <string name="its_not_take_long_time">Это не займет много времени :)</string>
    <string name="friend_tour_body">Вы тоже можете приглашать своих знакомых к нам и получать 5000 рублей за сделку!</string>
    <string name="tour_temp_name">Иван Иванов</string>
    <string name="friend_tour_header">Вас пригласил:</string>
    <string name="fill_hypothec_data">Введите свое имя и номер телефона в формате +79123456789</string>
    <string name="accept">Принять</string>
    <string name="cancel">Отмена</string>
    <string name="saving">Сохранение...</string>
    <string name="hypothec_start_status">Заявка отправлена на рассмотрение</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="you_have_no_money">У вас пусто на счету… Пригласите друга!</string>
    <string name="form_mask">http://ratapp.xyz/munion/invite?id=%d</string>
    <string name="friendMessageMask">Привет! Продай свою квартиру быстрее с моими друзьями из MUnion, переходи по ссылке: %s</string>
</resources>