<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_order"
        android:layout_width="@dimen/credit_btn_width"
        android:layout_height="@dimen/credit_btn_height"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="147dp"
        android:text="@string/credit_btn_text" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="@dimen/credit_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_phone"
        android:layout_alignLeft="@+id/edit_phone"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/credit_edit_hint_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="@dimen/credit_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_order"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/credit_edit_hint_phone"
        android:inputType="phone" />

    <TextView
        android:id="@+id/tv_head_text"
        android:layout_width="@dimen/credit_text_view_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/credit_head_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

</RelativeLayout>