<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:src="@mipmap/ic_logo3"
        android:contentDescription="@string/munion_logo"
        android:scaleType="center"
        android:layout_margin="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/center_secondary_homes"
        android:textSize="26sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_margin="16dp"
        android:paddingTop="16dp"
        android:gravity="center_horizontal|top"
        android:text="@string/munion_tour_body"
        android:textSize="16sp"
        android:textColor="@color/hint"/>

</LinearLayout>