<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <me.grantland.widget.AutofitTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1.5"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/chat_tour_head"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:contentDescription="@string/munion_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/chat_logo_tour" />

    <me.grantland.widget.AutofitTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:paddingTop="16dp"
        android:gravity="center_horizontal|top"
        android:text="@string/chat_tour_body"
        android:textSize="20sp"
        android:textColor="@color/hint"/>

</LinearLayout>