<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingTop="18dp">

    <me.grantland.widget.AutofitTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1.5"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/stat_tour_head"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:contentDescription="@string/munion_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/stat_logo_tour" />

    <me.grantland.widget.AutofitTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="80dp"
        android:layout_weight="1.05"
        android:gravity="center"
        android:text="@string/stat_tour_body"
        android:textColor="@color/hint"
        android:textSize="16sp" />


</LinearLayout>